# py-rate-limiter

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_rate_limiter/: __init__.py
tests/: test_rate_limiter.py
